<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 Gabriel Dogaru - gdogaru@gmail.com
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~  *
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<resources>

    <string name="font_roboto_regular">fonts/Roboto-Regular.ttf</string>
    <string name="font_roboto_bold">fonts/Roboto-Bold.ttf</string>
    <string name="font_roboto_medium">fonts/Roboto-Medium.ttf</string>
    <string name="font_roboto_black">fonts/Roboto-Black.ttf</string>
    <string name="font_robotocondensed_regular">fonts/RobotoCondensed-Regular.ttf</string>
    <!--tab-->
    <string name="overview">Overview</string>
    <string name="tracks">Tracks</string>
    <string name="sessions">Sessions</string>
    <string name="about">About</string>
    <string name="name">Name:</string>
    <string name="company">Company:</string>
    <string name="email">Email:</string>
    <string name="technology">Technology:</string>
    <string name="years_experience">Years Of Experience:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="email_policy">Use my email:</string>
    <string name="complete_all">Please complete all the fields.</string>
    <string name="track">Track:</string>
    <string name="speakers">Speakers</string>
    <string name="comments">Comments:</string>
    <string name="refresh_data">Refresh Event Data</string>
    <string name="no_internet">Codecamp could not refresh, no internet</string>

    <string name="all_tracks">All Tracks</string>
    <string name="select_track">Select Track</string>
    <string name="track_tell">Track: %s</string>
    <string name="set">Set</string>
    <string name="calendar">Calendar</string>

    <string-array name="technologies">
        <item>Java</item>
        <item>.NET</item>
        <item>C++</item>
        <item>Php</item>
        <item>Ruby</item>
        <item>Java Script</item>
        <item>HTML</item>
        <item>Testing</item>
        <item>Project Management</item>
        <item>Business Analysis</item>
        <item>Other (please specify below)</item>
    </string-array>

    <string-array name="experiences">
        <item>Student/no working experience</item>
        <item>&lt;= 2 years</item>
        <item>&gt; 2 years AND &lt;= 5 years</item>
        <item>&gt; 5 years AND &lt;=9 years</item>
        <item>&gt;= 10 years</item>
    </string-array>

    <string-array name="email_policy">
        <item>Yes</item>
        <item>No</item>
        <item>I dont care</item>
    </string-array>

    <string name="server_registering">%1$d from %2$d</string>
    <string name="server_registered"></string>
    <string name="server_register_error"></string>
    <string name="ok">OK</string>
    <string name="server_unregistered">Unregistered from server</string>
    <string name="server_unregister_error">Server unregister error</string>
    <string name="gcm_error">GCM error %1$s</string>
    <string name="gcm_deleted">Push Notification Deleted</string>
    <string name="gcm_recoverable_error">GCM Recoverable error %1$s</string>
    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="notification_title">Codecamp Update</string>
    <string name="copyright">- codecamp agenda app\n- by Gabriel Dogaru, gdogaru.com\n- github.com/gdogaru</string>
    <string name="session_info">Session Info</string>
    <string name="title_activity_maps">Map</string>
    <string name="refrsh_data">&#8634;Refresh Data</string>
    <string name="sponsors">Sponsors</string>

    <string name="thanks_for_using">Thank you for using the app!</string>
    <string name="please_rate">Please repay us with a good rating.</string>
    <string name="rate">Rate</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="location">Location</string>
    <string name="event_schedule">Event Schedule</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_favorites_yet">No favorites defined yet!</string>
    <string name="no_internet_connection">No internet connnection!!!</string>
    <string name="retry">Retry</string>
    <string name="there_was_a_problem_loading_events_data">There was a problem loading events data...</string>
    <string name="lorem_ipsum">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc</string>

</resources>
