<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/Codecamp.Dialog.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanks_for_using" />

        <TextView
            style="@style/Codecamp.Dialog.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/please_rate" />

    </LinearLayout>
    <!--rate button-->
    <Button
        android:id="@+id/rateButton"
        style="@style/Codecamp.Dialog.Button"
        android:layout_marginTop="15dp"
        android:text="@string/rate" />
    <!--never button-->
    <Button
        android:id="@+id/neverButton"
        style="@style/Codecamp.Dialog.Button"
        android:layout_marginTop="5dp"
        android:text="@string/never" />

    <!--later button-->
    <Button
        android:id="@+id/laterButton"
        style="@style/Codecamp.Dialog.Button"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/later" />


</LinearLayout>