<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2019 Gabriel Dogaru - gdogaru@gmail.com
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~  *
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/sessionTitle"
            style="@style/header_1"
            fontPath="@string/font_roboto_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            tools:text="title" />

        <TextView
            android:id="@+id/sessionTime"
            style="@style/field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="13.06.09 - 14.06.09" />


        <LinearLayout
            android:id="@+id/sessionTrackLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/header_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sessionTrack"
                style="@style/field_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingTop="0dp"
                tools:text="track" />
        </LinearLayout>

        <TextView
            android:id="@+id/sessionDescription"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="description sd" />

        <LinearLayout
            android:id="@+id/speakerLayoutOuter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/header_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/speakers" />

            <LinearLayout
                android:id="@+id/speakerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
