<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout style="@style/Codecamp.AppBarLayout">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Codecamp.Toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="10dp"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/codecamp_title"/>

                <Spinner
                    android:id="@+id/location_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"/>
            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/main_padding">

                <TextView
                    android:id="@+id/eventTitle"
                    style="@style/header_1"
                    fontPath="@string/font_roboto_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="title"/>

                <TextView
                    android:id="@+id/eventDate"
                    style="@style/field_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10 November 2012"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/agenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:visibility="visible"
                tools:context=".view.MainActivity"
                tools:listitem="@layout/main_schedule_item"/>

            <RelativeLayout
                android:id="@+id/speakers"
                android:layout_width="match_parent"
                android:layout_height="@dimen/schedule_item"
                android:background="@drawable/list_item_background"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/main_padding"
                    android:paddingRight="@dimen/main_padding">

                    <TextView
                        style="@style/header_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:text="@string/speakers"/>

                    <ImageView style="@style/ChevronLarge"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/list_vertical_divider"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sponsors"
                android:layout_width="match_parent"
                android:layout_height="@dimen/schedule_item"
                android:background="@drawable/list_item_background"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/main_padding"
                    android:paddingRight="@dimen/main_padding">

                    <TextView
                        android:id="@+id/title"
                        style="@style/header_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:text="Sponsors"/>

                    <ImageView style="@style/ChevronLarge"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/list_vertical_divider"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/main_padding"
                android:paddingRight="@dimen/main_padding">

                <TextView
                    style="@style/header_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Location"/>

                <TextView
                    android:id="@+id/location"
                    style="@style/field_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="hotel ramada"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mapLayout"
                android:layout_width="fill_parent"
                android:layout_height="180dp"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:text="@string/copyright"
                android:textStyle="italic"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
